modules/deployment/kubernetes/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {name}
  namespace: {namespace}
  labels:
    app: {name}
    fix_id: {fix_id}
spec:
  selector:
    app: {name}
    fix_id: {fix_id}
  ports:
  - port: {port}
    targetPort: {target_port}
  type: {service_type}
